    - Document noapic on f5.txt. Closes: #238609
    - Set apt to retry 3 times to guard against intermittent network problems
      and make builds more robust.
    - Move firewire stuff to isolinux CD initrd; the el-toritoc CD initrd
      is full.
    - Remove ppp-modules udeb from net_drivers floppy images, which do not
      have ppp-udeb on them.
  * Colin Watson
    - Reduce the four cloned-and-hacked yaboot.conf files to one, with the
      type substituted in at build time.
    - Remove redundant discover1-udeb and discover1-data-udeb from powerpc
      monolithic list.
    - Add cramfs initrd support.
    - Add support for powerpc 2.6 installs, currently monolithic-only.
    - stats targets cope with TEMP_INITRD being empty.
    - powerpc-small root floppy was out of space; split off an asian-root
      floppy, the same as we already have for i386. Closes: #246958
    - Drop console-keymaps-amiga from non-apus powerpc initrds.
    - Add lvmcfg-utils to pkg-lists/monolithic/common for now; partman-lvm
      needs it.
    - Arrange for there actually to be a kernel on the powerpc-small boot
      floppy again. This is slightly moot, though, as we don't have miboot
      yet so it's still not bootable ...
    - Add eject-udeb to powerpc CDs.
    - Comment out powerpc monolithic target again, since the images tarball
      is already quite enormous enough and monolithic is mainly intended for
      developer testing.
    - Add leading slash to "etc/hostname" in manual (closes: #249101).
  * Steve Langasek
    - Change netboot target for alpha now that netabootwrap is in the
      archive, and add an appropriate versioned build-dep.
  * Vincent Sanders
    - Add fsck to check ext2 initrd.
  * Joshua Kwan
    - Bump ramdisk_size for sparc to 8192.

 -- Joey Hess <joeyh@debian.org>  Tue,  4 May 2004 16:56:04 -0400

debian-installer (20040430) unstable; urgency=low

  * Rebuilt w/o i386 stuff in localudebs (argh).
