@@ -52,6 +52,7 @@ debian-installer (20040505) UNRELEASED; urgency=low
       is full.
     - Remove ppp-modules udeb from net_drivers floppy images, which do not
       have ppp-udeb on them.
+    - Pull udebs from testing when building official images.
   * Colin Watson
     - Reduce the four cloned-and-hacked yaboot.conf files to one, with the
       type substituted in at build time.
